--- a/js.html
+++ b/js.html
@@ -7,7 +7,7 @@
     <title>My JS</title>
 </head>
 <body>
-    <p>Hello my JS</p>
+    <p>Hello my first JS</p>
 
     
     <script src="JsScript/jsscript.js"></script>    
